[gd_scene load_steps=1 format=3 uid="uid://cdxqh87hqv5j7k"]

[ext_resource type="Script" path="res://scripts/game_scene.gd" id="1_abc12"]

[node name="GameScene" type="CanvasLayer"]
layer = 1
script = ExtResource("1_abc12")

[node name="Background" type="ColorRect" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
custom_minimum_size = Vector2(800, 0)

[node name="ScoreBox" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
alignment = 0

[node name="YourScoreLabel" type="Label" parent="UI/VBoxContainer/ScoreBox"]
layout_mode = 2
text = "Your Score: 0"
add_theme_font_size_override("font_size", 24)
add_theme_color_override("font_color", Color(1, 1, 1, 1))
add_theme_color_override("font_outline_color", Color(0, 0, 0, 1))
add_theme_constant_override("outline_size", 1)

[node name="OpponentScoreLabel" type="Label" parent="UI/VBoxContainer/ScoreBox"]
layout_mode = 2
margin_left = 100.0
text = "Opponent Score: 0"
add_theme_font_size_override("font_size", 24)
add_theme_color_override("font_color", Color(1, 1, 1, 1))
add_theme_color_override("font_outline_color", Color(0, 0, 0, 1))
add_theme_constant_override("outline_size", 1)

[node name="Spacer1" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ProblemLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
text = "12 + 8 = ?"
horizontal_alignment = 1
vertical_alignment = 1
add_theme_font_size_override("font_size", 48)
add_theme_color_override("font_color", Color.WHITE)

[node name="TimerLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "15s"
horizontal_alignment = 1
add_theme_font_size_override("font_size", 36)
add_theme_color_override("font_color", Color.YELLOW)

[node name="Spacer2" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="OptionsGrid" type="GridContainer" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
columns = 2
alignment = 2

[node name="Option1Btn" type="Button" parent="UI/VBoxContainer/OptionsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 90)
text = "0"
modulate = Color(0.5, 0, 1, 1)
add_theme_font_size_override("font_size", 32)
add_theme_color_override("font_color", Color.WHITE)

[node name="Option2Btn" type="Button" parent="UI/VBoxContainer/OptionsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 90)
text = "0"
modulate = Color(0.5, 0, 1, 1)
add_theme_font_size_override("font_size", 32)
add_theme_color_override("font_color", Color.WHITE)

[node name="Option3Btn" type="Button" parent="UI/VBoxContainer/OptionsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 90)
text = "0"
modulate = Color(0.5, 0, 1, 1)
add_theme_font_size_override("font_size", 32)
add_theme_color_override("font_color", Color.WHITE)

[node name="Option4Btn" type="Button" parent="UI/VBoxContainer/OptionsGrid"]
layout_mode = 2
custom_minimum_size = Vector2(200, 90)
text = "0"
modulate = Color(0.5, 0, 1, 1)
add_theme_font_size_override("font_size", 32)
add_theme_color_override("font_color", Color.WHITE)

[node name="Spacer3" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = ""
horizontal_alignment = 1
add_theme_font_size_override("font_size", 32)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray()
spawn_path = NodePath(".")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = false

[node name="ResultTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
volume_db = 0.0

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
volume_db = 0.0

[node name="CorrectParticles" type="GPUParticles2D" parent="."]
position = Vector2(512, 300)
emitting = false

[node name="WrongShake" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0

[node name="PauseOverlay" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PauseVBox" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_left = 0.5
anchors_top = 0.5
anchors_right = 0.5
anchors_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
alignment = 1

[node name="PauseTitle" type="Label" parent="PauseMenu/PauseVBox"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
add_theme_font_size_override("font_size", 48)
add_theme_color_override("font_color", Color(1, 1, 1, 1))
add_theme_color_override("font_outline_color", Color(0, 0, 0, 1))
add_theme_constant_override("outline_size", 2)

[node name="Spacer" type="Control" parent="PauseMenu/PauseVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ResumeBtn" type="Button" parent="PauseMenu/PauseVBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Resume"
modulate = Color(0, 0.5, 1, 1)

[node name="QuitBtn" type="Button" parent="PauseMenu/PauseVBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "Quit to Menu"
modulate = Color(1, 0, 0, 1)

[connection signal="pressed" from="UI/VBoxContainer/OptionsGrid/Option1Btn" to="." method="_on_option_pressed" binds=[0]]
[connection signal="pressed" from="UI/VBoxContainer/OptionsGrid/Option2Btn" to="." method="_on_option_pressed" binds=[1]]
[connection signal="pressed" from="UI/VBoxContainer/OptionsGrid/Option3Btn" to="." method="_on_option_pressed" binds=[2]]
[connection signal="pressed" from="UI/VBoxContainer/OptionsGrid/Option4Btn" to="." method="_on_option_pressed" binds=[3]]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="ResultTimer" to="." method="_on_result_timer_timeout"]
[connection signal="timeout" from="WrongShake" to="." method="_on_wrong_shake_timeout"]
[connection signal="pressed" from="PauseMenu/PauseVBox/ResumeBtn" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/PauseVBox/QuitBtn" to="." method="_on_quit_pressed"]
